--- a/src/sass/layouts/_scaffolding.sass
+++ b/src/sass/layouts/_scaffolding.sass
@@ -36,10 +36,6 @@ $blue: #1641ed
 body
     font-size: 16px
     background-color: $blue
-    background-image: url("../images/graph-bg.svg")
-    -webkit-background-size: auto 100%
-    background-size: auto 100%
-    background-repeat: no-repeat
     position: relative
     font-family: $flight
     color: #fff
@@ -55,12 +51,17 @@ body
     flex-direction: column
     position: relative
     overflow: hidden
-    padding: 50px 150px 115px
+    padding: 60px 140px 110px
     height: 100vh
     font-size: 30px
     position: relative
-    min-width: 1300px
-    min-height: 700px
+    min-height: 768px
+    min-width: 320px
+    background-image: url("../images/graph-bg.svg")
+    -webkit-background-size: auto 100%
+    background-size: auto 100%
+    background-repeat: no-repeat
+    background-position: 0 0
     &__header
         text-align: right
     &__main
@@ -71,7 +72,9 @@ body
     &__footer
         text-align: right
     &__header-button
-        margin-right: 35px
+        margin-right: 25px
+        &:first-child
+            margin-right: 48px
         &:last-child
             margin-right: 0
     &__popups
@@ -114,13 +117,13 @@ body
 
 .button
     font-family: $fdemi
-    font-size: 30px
+    font-size: 24px
     border: 2px solid #f2f2f2
     border-radius: 10px
-    line-height: 46px
+    line-height: 36px
     display: inline-block
     vertical-align: middle
-    padding: 0 25px
+    padding: 0 22px
     outline: none
     background-color: inherit
     text-decoration: none
@@ -140,13 +143,13 @@ body
 .main-content
     text-align: right
     &__logo
-        width: 800px
+        width: 760px
         margin-bottom: 40px
-        height: 145px
+        height: 135px
     &__subtitle
-        font-size: 56px
+        font-size: 52px
         line-height: 1em
-        margin-bottom: 90px
+        margin-bottom: 60px
 
 .templates-box
     &__nav
@@ -196,7 +199,7 @@ body
         display: table-row
     &__td
         display: table-cell
-        padding:  30px 0
+        padding:  45px 0 30px
         border-bottom: 3px solid $blue
         &_title
             font-family: $febold
@@ -306,25 +309,234 @@ body
     resize: none
 
 
-@media screen and (max-width: 1500px)
+@media screen and (max-width: 1919px)
     .page
-        padding: 50px 100px
+        padding: 30px 100px 90px
+        font-size: 22px
+        &__header-button
+            margin-right: 15px
+            &:first-child
+                margin-right: 15px
+            &:last-child
+                margin-right: 0
+        &__soc
+            left: 30px
+            top: 30px
 
-    .button, .page
-        font-size: 25px
+    .button
+        line-height: 24px
+        border-radius: 20px
+        font-size: 15px
+
 
     .main-content
         &__logo
-            width: 600px
-            height: 115px
+            width: 540px
+            height: 95px
             margin-bottom: 20px
         &__subtitle
             margin-bottom: 60px
+            font-size: 36px
 
 
     .templates-box__nav
-        margin: 0 70px
-
+        margin: 0 100px 0 40px
 
     .popup_form
         width: 1200px
+
+    .soc__item
+        font-size: 30px
+
+
+    .popup__title
+        font-size: 34px
+
+
+    .form__section-title
+        font-size: 17px
+
+    .st-input, .st-textarea
+        font-size: 14px
+        height: 40px
+
+    .form__line
+        min-height: 40px
+
+    .close
+        height: 30px
+        width: 30px
+
+    .prices-table__td
+        padding: 35px 0 24px
+
+
+
+@media screen and (max-width: 1365px)
+    .main-content__logo
+        height: 75px
+        width: 400px
+        margin-bottom: 20px
+
+    .page
+        padding: 30px 75px 50px 
+        font-size: 20px
+        background-position: -100px center
+
+    .templates-box__nav
+        margin:  0 30px
+
+    .templates-nav__link
+        margin-right: 30px
+
+    .popup
+        width: 640px
+        &_form
+            width: 840px
+
+
+@media screen and (max-width: 1023px)
+    .popup
+        width: 450px
+        padding: 20px
+
+
+    .page
+        min-height: 100%
+        font-size: 14px
+        background-position: -200px center
+
+    .main-content__logo
+        height: 60px
+        width: 340px
+
+    .main-content__subtitle
+        font-size: 24px
+        margin-bottom: 40px
+
+    .popup__title
+        font-size: 24px
+        margin-bottom: 30px
+
+    .popup__content
+        margin-bottom: 50px
+
+    .prices-table__td
+        padding: 24px 0 15px
+
+
+    .popup_form
+        width: 620px
+
+    .popup_form .popup__content, .popup_form .popup__title
+        margin-bottom: 20px
+
+    .form__section-title
+        font-size: 14px
+
+    .form__line
+        margin-bottom: 10px
+
+    .close
+        width: 20px
+        height: 20px
+
+    .popup__close
+        right: -25px
+        top: -25px
+
+
+@media screen and (max-width: 767px)
+    .mobile-dn
+        display: none
+
+    .button
+        padding:  0 10px
+        line-height: 16px
+        font-size: 10px
+        border-radius: 7px
+        border: 1px solid #f2f2f2
+
+    .page
+        padding: 30px 20px 80px
+        min-height: 480px
+        font-size: 12px
+        background-position: -120px center
+        &__header-button
+            margin-right: 10px
+            &:last-child
+                margin-right: 0
+            &:first-child
+                margin-right: 10px
+
+    .main-content__logo
+        width: 220px
+        height: 40px
+        margin-bottom: 10px
+
+    .templates-box__top-content
+        display: block
+        padding: 0
+        &:before
+            bottom: auto
+            top: 20px
+            height: 1px
+
+    .templates-box__nav
+        margin: 0
+        align-items: flex-end
+        padding: 10px 0 50px
+
+    .main-content__subtitle
+        font-size: 16px
+        margin-bottom: 30px
+
+    .soc__item
+        font-size: 20px
+
+    .page__soc
+        left: auto
+        top: auto
+        right: 20px
+        bottom: 30px
+
+    .templates-box__bottom-content
+        padding: 0
+
+    .popup
+        width: 250px
+        padding: 10px
+
+    .prices-table__td
+        display: block
+        &:first-child
+            padding: 15px 0 0
+            border: none
+        &:last-child
+            padding: 0 0 15px
+
+    .popup__button
+        margin-right: 10px
+        &:last-child
+            margin-right: 0
+
+    .popup__title
+        font-size: 20px
+
+    .form__section-title
+        font-size: 10px
+
+    .form
+        display: block
+        &__section
+            width: 100%
+
+    .form__line
+        min-height: 30px
+        border-bottom: 1px solid $blue
+
+    .prices-table__td
+        border-bottom: 1px solid $blue
+
+    .popup__close
+        top: -15px
